--- a/assets/css/1-legacy.css
+++ b/assets/css/1-legacy.css
@@ -73,8 +73,8 @@ leading-words { text-transform: uppercase; letter-spacing: 0.04em; font-size: 0.
 .front-page h2 { font-size: 1.4em; }
 .other-sites li { margin-bottom: 40px; position: relative; font-size: 0.9em;
 line-height: 1.3; }
-.other-sites li a { position: absolute; top:0; left: 0; right: 0; bottom: 0; z-index: 10;}
-.other-sites li a:hover { opacity: 0.1; background-color: black; margin: -10px; }
+
+.other-sites li a:hover { opacity: 0.9;   }
 .other-sites h3 { margin: 10px 0 5px 0; }
 
 .blog-list-simple { font-size: 1.1em; line-height: 1.3; font-family: 'Rubik', sans-serif;}
