--- a/lib/ahfi_web/templates/post/show.html.eex
+++ b/lib/ahfi_web/templates/post/show.html.eex
@@ -6,7 +6,7 @@
       <h1><%= @post.title %></h1>
       <%= if @current_user do %>
         <%= link "Edit", to: post_path(@conn, :edit, @post.id) %>
-      <%= end %>
+      <% end %>
       <%= (Earmark.as_html! @post.body) |> raw %>
 
       <div class="related-posts">
