--- a/lib/ahfi_web/templates/post/disqus.html.eex
+++ b/lib/ahfi_web/templates/post/disqus.html.eex
@@ -1,7 +1,7 @@
 <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = '<%= disqus_shortname %>'; // required: replace example with your forum shortname
+        var disqus_shortname = '<%= disqus_shortname() %>'; // required: replace example with your forum shortname
         var disqus_identifier = '<%= absolute_url @conn, @post %>';
         var disqus_url = '<%= absolute_url @conn, @post %>';
         var disqus_title = '<%= @post.title %>';
