--- a/lib/ahfi_web/templates/session/new.html.eex
+++ b/lib/ahfi_web/templates/session/new.html.eex
@@ -2,5 +2,5 @@
 <%= form_for @conn, session_path(@conn, :create), [as: :session], fn f -> %>
   <%= password_input f, :password, placeholder: "Password", class: "form-control"%>
   <%= submit "Log in", class: "btn btn-primary" %>
-<%= end %>
+<% end %>
 </div>
