--- a/assets/css/1-legacy.css
+++ b/assets/css/1-legacy.css
@@ -107,11 +107,10 @@ line-height: 1.3; }
 
 /* --- VIEW POST --- */
 
-.article { margin-top: 10rem; }
-.article h1 { margin-top: 0; }
+
 .article h2 { margin-top: 40px; }
 .post { margin-bottom: 60px;}
-.date_published { color: #999; font-size: 14px; margin-bottom: -10px; line-height: 1.5}
+.date_published { color: #999; font-size: 14px; margin-top: 40px; line-height: 1.5}
 
 
 .related-posts { overflow: hidden; font-family: 'Rubik', sans-serif; padding: 40px 0; text-transform: uppercase; letter-spacing: 0.03em; font-size: 0.8em; }
