--- a/lib/ahfi_web/templates/post/form.html.eex
+++ b/lib/ahfi_web/templates/post/form.html.eex
@@ -1,5 +1,6 @@
-<div class="container">
+
 <%= form_for @changeset, @action, fn f -> %>
+  <div class="col-sm-9">
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -11,6 +12,8 @@
     <%= textarea f, :body, class: "form-control" %>
     <%= error_tag f, :body %>
   </div>
+</div>
+<div class="col-sm-3">
 
   <div class="form-group">
     <%= label f, :slug, class: "control-label" %>
@@ -45,5 +48,5 @@
   <div class="form-group">
     <%= submit "Save", class: "btn btn-primary" %>
   </div>
-<% end %>
 </div>
+<% end %>
