--- a/lib/ahfi_web/templates/post/index.html.eex
+++ b/lib/ahfi_web/templates/post/index.html.eex
@@ -1,12 +1,13 @@
+<div class="container">
 <h2>Listing posts</h2>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Body</th>
-      <th>Slug</th>
-      <th>Date published</th>
+      <th></th>
       <th>Title</th>
+      <th>Date published</th>
+      <th>Slug</th>
 
       <th></th>
     </tr>
@@ -14,10 +15,10 @@
   <tbody>
 <%= for post <- @posts do %>
     <tr>
-      <td><%= post.body %></td>
-      <td><%= post.slug %></td>
-      <td><%= post.date_published %></td>
+      <td><%= if post.is_published do "" else "Draft"  end %></td>
       <td><%= post.title %></td>
+      <td><%= post.date_published %></td>
+      <td><%= post.slug %></td>
 
       <td class="text-right">
         <%= link "Show", to: post_path(@conn, :show, post), class: "btn btn-default btn-xs" %>
@@ -30,3 +31,4 @@
 </table>
 
 <%= link "New post", to: post_path(@conn, :new) %>
+</div>
