--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,6 +6,34 @@ h2  { margin-top: 2em; }
 .front-page .cognitools { margin-bottom: 2em}
 .front-page .cognitools ul { margin: 0.5em 0}
 
+.blog-list-simple h2 { font-size: 1.1em; line-height: 1.3; font-family: 'Rubik', sans-serif;
+text-transform: none;
+letter-spacing: normal;
+margin: 10px 0;
+}
+.blog-list-simple li { margin-bottom: 0.5ex; font-size: 0.85em;
+}
+
+.blog-list-simple li p.teaser-text { display: none }
+.blog-list-simple li:nth-child(-n+10) {
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+.blog-list-simple li:nth-child(-n+3) {
+    margin-bottom: 6ex;
+}
+.blog-list-simple li:nth-child(-n+3) p.teaser-text {
+  display: block;
+}
+.blog-list-simple li:nth-child(-n+3) h2 {
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+}
+.blog-list-simple .date_published { margin-left: 5px; padding-bottom: 10px}
+.blog-list-simple .featured-image { max-height: 300px; max-width: 500px;overflow: hidden;}
+
+.front-page .blog-list-simple li { text-transform: none; font-size: 1em; margin: 1ex 0 }
+
 textarea.form-control { font-size: 20px; padding: 20px 50px; }
 textarea { min-height: 500px;  }
 
