--- a/assets/css/1-legacy.css
+++ b/assets/css/1-legacy.css
@@ -49,8 +49,8 @@ h2 a, h3 a, h4 a { color: #0E805C; }
 a { color: #B3006E; color: #0E805C;}
 a:hover, a:focus  { color: #B3006E; }
 
-.article p { margin-bottom: 0; }
-.article p + p {  text-indent: 2em;}
+.article p {}
+/* .article p + p {  text-indent: 2em;} */
 p img { margin-top: 5px; margin-bottom: 10px;}
 img { max-width: 100%}
 
@@ -96,7 +96,7 @@ line-height: 1.3; }
 /* --- VIEW POST --- */
 
 
-.article h2 { margin-top: 40px; }
+.article h2 { margin-top: 40px; font-weight: normal: }
 .post { margin-bottom: 60px;}
 .date_published { color: #999; font-size: 14px; margin-top: 40px; line-height: 1.5}
 
