Startup software to front page

--- a/lib/ahfi_web/templates/page/index.html.eex
+++ b/lib/ahfi_web/templates/page/index.html.eex
@@ -9,7 +9,8 @@
           </p>
           <p>
             I'm passionate about programming and personal development.
-            At the moment I'm likely working with my mind maps or
+            At the moment I'm likely developing software in a startup,
+            working with my mind maps or
             building software tools for thinking and learning.
           </p>
           <p>The web is my platform.</p> <p>
