--- a/assets/css/1-legacy.css
+++ b/assets/css/1-legacy.css
@@ -96,7 +96,7 @@ line-height: 1.3; }
 /* --- VIEW POST --- */
 
 
-.article h2 { margin-top: 40px; font-weight: normal: }
+.article h2 { margin-top: 40px; font-weight: normal }
 .post { margin-bottom: 60px;}
 .date_published { color: #999; font-size: 14px; margin-top: 40px; line-height: 1.5}
 
