--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,5 @@
 /* This file is for your main application css. */
+html { font-size: 18px; }
 body { margin-top: 0; }
 
 h2  { margin-top: 2em; }
@@ -90,6 +91,10 @@ padding: 0 22px;
 ul.projects > li { overflow: hidden; }
 ul.projects > li  img {width: 100%; max-width: 300px;  }
 .other-sites .col-md-8 { position: static; }
+
+.cognitools  .tagline { font-family: 'Rubik', sans-serif; }
+.cognitools  .description { font-size: 1rem; line-height: 1.3; max-width: 40em }
+.cognitools ul > li { margin-bottom: 2ex}
 
 em.tagline { margin-bottom: 0.2em; font-size: 1.1em; display: block }
 
